fixed figure story for new alignment classes

--- a/source/03-components/figure/_figure.scss
+++ b/source/03-components/figure/_figure.scss
@@ -7,11 +7,14 @@
   margin-bottom: rem(gesso-spacing(2));
   margin-top: 0;
 
+  &.align-center,
   &.u-align-center {
     clear: both;
+    display: table;
     margin-top: rem(gesso-spacing(2));
   }
 
+  &.align-left,
   &.u-align-left {
     @include breakpoint(gesso-breakpoint(tablet)) {
       margin-right: rem(gesso-spacing(4));
@@ -19,6 +22,7 @@
     }
   }
 
+  &.align-right,
   &.u-align-right {
     @include breakpoint(gesso-breakpoint(tablet)) {
       margin-left: rem(gesso-spacing(4));
@@ -58,6 +62,11 @@
 .c-figure--iframe {
   display: block;
   width: 100%;
+
+  &.align-center,
+  &.u-align-center {
+    display: block;
+  }
 
   .c-figure__caption {
     display: block;
